Fixed test result word container wrap

--- a/src/app/test-results/test-results.component.css
+++ b/src/app/test-results/test-results.component.css
@@ -93,5 +93,5 @@
 
 .label-container {
   margin: 0 auto;
-  width: max-content;
+  width: fit-content;
 }
